syntax = "proto3";

service TwoPhaseCommit {
	rpc Tentative(TentativeRequest) returns (TentativeReply);
	rpc Commit(CommitRequest)		returns (CommitReply);
}

// TODO: 2PC is still unfinished
// Do we need to send this ?
// Secondary bank processes must update their balancce somehow
enum ClientAction {
	DEPOSIT = 0;
	WITHDRAW = 1;
	READ = 2;
}
message ClientRequest {
	ClientAction action = 1;
	int32 value = 2;
}

message TentativeRequest {
	int32 processId = 1;
	int32 slot = 2;
	int32 sequenceNumber = 3;
}
message TentativeReply {
	bool acknowledge = 1;
}

message CommitRequest {
	int32 processId = 1;
	int32 slot = 2;
	int32 sequenceNumber = 3;
	ClientRequest request = 4;
}
message CommitReply {
}

service Cleanup {
	rpc Cleanup(ListPendingRequestsRequest) returns (ListPendingRequestsReply);
}

message ListPendingRequestsRequest {
	int32 lastKnownSequenceNumber = 1;
}
message ListPendingRequestsReply{
	// Empty ?
}
