syntax = "proto3";

service Paxos {
  rpc Prepare(PrepareRequest) returns (PromiseReply);
  rpc Porpose(PorposeRequest) returns (AcceptReply);
}

message PrepareRequest {
    int32 leaderId = 1;
}
message PromiseReply {
    int32 readTimestamp = 1;
    int32 value = 2;
}

message PorposeRequest {
  int32 leaderId = 1;
  int32 value = 2;
}
message AcceptReply {
  int32 writeTimestamp = 1;
  int32 value = 2;
}